style.css
:root {
  --dark: #0f0f0f;
  --light: #1a1a1a;
  --brown-dark: #973700;
  --brown-light: #b44200;
  --text-smooth: #eeeeee;
  --text-white: #ffffff;
  --smoother: #dbdbdb;
  --blue-dark: #003a5c93;
  --blue-smooth: #00a2ffb0; 
}

* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;
}
html,
body {
  width: 100%;
  height: 100%;
}

small{
  font-size: 1.3rem;
}

main {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  background: var(--dark);
  position: relative;
}

.container {
  width: clamp(700px, 100vw, 1100px);
  height: 100%;
}

.theme{
  cursor: pointer;
  /* position: absolute;
  left: 50%;
  top: 50%; */
  margin-left: 4rem;
  width: 75px;
  height: 30px;
  background: var(--smoother);
  display: inline-block;
  display: flex;
  align-items: center;
  padding: 0.2rem;
  border-radius: 10rem;
  transition: all 0.3s ease-out;
}
.theme-btn{
  background-color: var(--light);
  display: inline-block;
  width: 25px;
  height: 100%;
  border-radius: 10rem;
}

.heading{
  font-weight: 800;
}

nav {
  color: var(--text-smooth);
  padding: 2rem 4rem;
  display: flex;
  justify-content: space-between;
  position: relative;
}

nav button {
  cursor: pointer;
  padding: 0.3rem 1rem;
  font-size: 1.1rem;
  font-weight: 600;
  border-radius: 0.4rem;
  border: solid 1px var(--smoother);
  background: var(--brown-light);
  color: white;
}

nav span {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 1px;
  background: linear-gradient(
    to right,
    transparent,
    var(--brown-light),
    var(--brown-light),
    var(--brown-light),
    transparent
  );
}

.form {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background: rgb(0, 0, 0, 0.45);
  display: none;
  align-items: center;
  justify-content: center;
}

form {
  display: flex;
  flex-direction: column;
  padding: 1rem;
  border: solid 1px var(--brown-light);
  border-radius: 1rem;
  gap: 1rem;
  width: 300px;
  background: var(--dark);
}

form > div{
    display: flex;
    justify-content: space-between;
    align-items: center;
}

form > div span{
    color: var(--text-white);
    padding: 0.2rem 0.4rem;
    border-radius: 10rem;
    cursor: pointer;
    transition: all 0.3s ease-out;
}
form > div span:hover{
    background: var(--smoother);
    color: var(--dark);
}

form h2 {
  color: var(--text-smooth);
}

form input {
  color: var(--text-smooth);
  background: transparent;
  outline: none;
  border: solid 1px var(--brown-dark);
  font-size: 1.1rem;
  border-radius: 0.4rem;
  padding: 0.4rem;
}

form select {
  font-size: 1.1rem;
  color: var(--text-smooth);
  background: transparent;
  outline: none;
  border: solid 1px var(--brown-dark);
  border-radius: 0.4rem;
  padding: 0.4rem;
}

form select option {
  background: var(--dark);
  color: var(--text-smooth);
  border-bottom: solid 1px #b44200;
}

form button {
  cursor: pointer;
  margin-top: 1rem;
  padding: 0.4rem;
  border-radius: 0.4rem;
  background: var(--brown-light);
  border: none;
  color: var(--text-smooth);
  font-size: 1.02rem;
  font: 300;
}

.tasks-container {
  width: 100%;
  height: calc(100vh - 16%);
  padding: 2rem 4rem;
  color: var(--text-white);
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
  /* transition: all 0.3s ease-out; */
}

.task {
  box-shadow: 2px 2px 5px rgb(0,0,0,0.4);
  width: 95%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: var(--light);
  padding: 1rem;
  border-radius: 0.4rem;
  border: solid 1px var(--brown-light);
}

.task-left {
  width: 33%;
}

.task-left h5 {
  margin-top: 0.3rem;
  color: var(--blue-smooth);
  /* 00a2ffb0 light blue */
  /* #003a5c93 dark blue */

}

.task-right {
  position: relative;
  width: 33%;
  display: flex;
  justify-content: flex-end;
}

.status-container {
  transition: all 0.3s ease-out;
  height: 25px;
  display: flex;
}

.status-btn {
  cursor: pointer;
  display: flex;
  align-items: center;
  width: 100%;
  height: 100%;
  padding-left: 0.4rem;
}

.status {
  width: 120px;
  display: flex;
  flex-direction: column;
  border: solid 1px var(--brown-dark);
  position: absolute;
  left: 0;
  top: 27px;
  transform: translateX(-110%);
  background: #0f0f0f;
}

.status span {
  padding: 0.3rem 1.2rem;
  padding-left: 0.4rem;
  cursor: pointer;
  transition: all 0.3s ease-out;
  width: 100%;
}

.status span:nth-child(1),
.status span:nth-child(2) {
  border-bottom: solid 1px var(--brown-dark);
}

.more {
  color: #eeeeee !important;
  cursor: pointer;
  font-size: 1.2rem;
  font-weight: 500;
  background: var(--brown-light);
  display: inline-block;
  line-height: 0.2;
  padding: 0.2rem 0.3rem;
  border-radius: 0.2rem;
  height: 18px;
}

.options {
  position: absolute;
  color: #eeeeee;
  right: -50px;
  top: 25px;
  transform: translateX(-66%);
  display: flex;
  flex-direction: column;
  background: #0f0f0f;
  z-index: 2;
  border: solid 1px var(--brown-light);
  /* border-radius: 0.3rem; */
}

.options > span {
  padding: 0.3rem 1.3rem;
  padding-left: 0.4rem;
  cursor: pointer;
  transition: all 0.3s ease-out;
}

.options > span {
  border-bottom: solid 1px var(--brown-light);
}

.options span:hover {
  background: #222222;
}

.hidden {
  display: none;
}

.empty-container{
  font-size: 2rem;
  color: #aaaaaa;
  font-weight: 600;
  letter-spacing: 0.125px;
  margin-top: 5rem;
}

.no-select{
  user-select: none;
}

.current-status {
  text-align: center;
  background: #1a1a1a;
  width: 33%;
  padding: 0.5rem;
  border-radius: 10rem;
}

.not-started {
  color: #d4d400;
}
.in-progress {
    color: #d40000;
}
.completed {
  color: #00d400;
}

